--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -1,6 +1,63 @@
 /**
  * Reset some basic elements
  */
+.blinking-cursor {
+  font-weight: 100;
+  font-size: 18px;
+  color: #2E3D48;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: black;
+  }
+}
+
+
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
@@ -451,3 +508,16 @@ pre {
   .highlight .il {
     color: #099; }
 
+.js-ok,.js-nok {
+  width: 50px;
+  display: none;
+}
+
+.js-errors {
+  white-space: pre-wrap;
+  color: red;
+}
+
+.js-results {
+  white-space: pre-wrap;
+}
