removed contents link

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -5,10 +5,11 @@
 
   <header class="site-header" role="banner">
     <div class="wrapper">
-      <a class="site-title" href="/">Your awesome title</a>
+      <a class="site-title" href="/">Пroject λamp</a>
 
     <nav class="site-nav">
       <div class="trigger">
+	<!-- <a class="page-link" href="/table-of-contents/">Contents</a> -->
         <a class="page-link" href="/about/">About</a>
       </div>
     </nav>
