added link to contribute page

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -11,6 +11,7 @@
       <div class="trigger">
 	<!-- <a class="page-link" href="/table-of-contents/">Contents</a> -->
         <a class="page-link" href="/about/">About</a>
+	<a class="page-link" href="/contribute/">Contribute</a>
       </div>
     </nav>
 
