--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -22,6 +22,7 @@
       <div class="trigger">
 	<!-- <a class="page-link" href="/table-of-contents/">Contents</a> -->
         <a class="page-link" href="/about/">About</a>
+	<a class="page-link" href="/contribute/">Contribute</a>
       </div>
     </nav>
 
@@ -42,7 +43,7 @@
     <ul>
   <li><a href="/introduction">Introduction</a></li>
   <li><a href="/chapter1">1. First Steps</a></li>
-  <li><a href="/chapter2">2. Little Languages w/ Style</a></li>
+  <li><a href="">2. Little Languages w/ Style</a></li>
   <li><a href="">3. From Continuations to Monads</a></li>
   <li><a href="">4. Tests are Fun</a></li>
   <li>More <em>fun</em> ideas to come…</li>
