--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -57,9 +57,9 @@
     <ul>
   <li><a href="/introduction">Introduction</a></li>
   <li><a href="/chapter1">1. First Steps</a></li>
-  <li><a href="">2. Little Languages w/ Style</a></li>
-  <li><a href="">3. From Continuations to Monads</a></li>
-  <li><a href="">4. Tests are Fun</a></li>
+  <li>2. Little Languages w/ Style</li>
+  <li>3. From Continuations to Monads</li>
+  <li>4. Tests are Fun</li>
   <li>More <em>fun</em> ideas to come…</li>
 </ul>
 
