preparing for chp2

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -57,6 +57,7 @@
     <ul>
   <li><a href="/introduction">Introduction</a></li>
   <li><a href="/chapter1">1. First Steps</a></li>
+  <!-- <li><a href="/chapter2">2. Little Languages w/ Style</a></li> -->
   <li>2. Little Languages w/ Style</li>
   <li>3. From Continuations to Monads</li>
   <li>4. Tests are Fun</li>
