--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -56,11 +56,12 @@
   <div class="post-content">
     <ul>
   <li><a href="/introduction">Introduction</a></li>
-  <li><a href="/chapter1">1. First Steps</a></li>
-  <!-- <li><a href="/chapter2">2. Little Languages w/ Style</a></li> -->
-  <li>2. Little Languages w/ Style</li>
-  <li>3. From Continuations to Monads</li>
-  <li>4. Tests are Fun</li>
+  <li><a href="/chapter1">1. First Steps: The Basics</a></li>
+  <!-- <li><a href="/chapter2">2. Little Languages: Writing Interpreters</a></li> -->
+  <li>2. Little Languages: Writing Interpreters</li>
+  <li>3. Continuing with Style: Continuations</li>
+  <li>4. Monoids in the Category of Endofunctors: Monads and Type Classes</li>
+  <li>5. Tests are Fun: Generative Testing</li>
   <li>More <em>fun</em> ideas to come…</li>
 </ul>
 
