added link to chapter 2

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -57,8 +57,7 @@
     <ul>
   <li><a href="/introduction">Introduction</a></li>
   <li><a href="/chapter1">1. First Steps: The Basics</a></li>
-  <!-- <li><a href="/chapter2">2. Little Languages: Writing Interpreters</a></li> -->
-  <li>2. Little Languages: Writing Interpreters</li>
+  <li><a href="/chapter2">2. Little Languages: Writing Interpreters</a></li>
   <li>3. Continuing with Style: Continuations</li>
   <li>4. Monoids in the Category of Endofunctors: Monads and Type Classes</li>
   <li>5. Tests are Fun: Generative Testing</li>
