added link to chapter 3

--- a/website/_layouts/home.html
+++ b/website/_layouts/home.html
@@ -58,7 +58,7 @@
   <li><a href="/introduction">Introduction</a></li>
   <li><a href="/chapter1">1. First Steps: The Basics</a></li>
   <li><a href="/chapter2">2. Little Languages: Writing Interpreters</a></li>
-  <li>3. Continuing with Style: Continuations</li>
+  <li><a href="/chapter3">3. Continuing with Style: Continuations</a></li>
   <li>4. Monoids in the Category of Endofunctors: Monads and Type Classes</li>
   <li>5. Tests are Fun: Generative Testing</li>
   <li>More <em>fun</em> ideas to come…</li>
